--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -6,9 +6,17 @@
     tools:context=".Fragments.UsersFragment"
     android:background="#BCEFEF">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="Search..."
+        android:id="@+id/search_users"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/search_users"
         android:id="@+id/recycler_view" />
 
 </RelativeLayout>
